<resources>
    <string name="app_name">LearnSwedish</string>
    <string name="greeting_message">Whats Up!</string>
    <string name="swedish_hint">Swedish</string>
    <string name="english_hint">English</string>
    <string name="write_button">Write to DB</string>
    <string name="read_button">Read DB</string>
    <string name="write_perm_button">Request write permission</string>
    <string name="read_perm_button">Request read permission</string>
    <string name="empty_db">Nothing in database</string>
    <string name="import_act_button">Import Activity</string>
    <string name="flashcard_act_button">Flashcard Activity</string>
    <string name="clear_all">Clear Table</string>
</resources>